# deepsearch

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deepsearch/: __init__.py  app.py  datatype.py  embedding_models_config.py  enums.py  llms_config.py  utils.py
deepsearch/embedding_models/: base.py  blip_image_captioning.py  clip.py  whisper.py  whisper_openai.py
deepsearch/llms/: base.py  clip.py  openai.py  whisper.py  whisper_openai.py
deepsearch/llms/configs/: base.py  openai.py
deepsearch/sources/: base.py  data_source.py  enums.py  google_drive.py  local.py  s3.py  utils.py  youtube.py
deepsearch/tests/: test_local.py  test_whisper.py
deepsearch/tests/end_to_end/: add_and_query_chromadb.py
deepsearch/tests/llms/: test_whisper.py
deepsearch/tests/sources/: test_local.py  test_s3.py
deepsearch/tests/vector_databases/: test_chromadb.py
deepsearch/vector_databases/: base.py  chromadb.py
deepsearch/vector_databases/configs/: base.py  chromadb.py
deepsearchai/: __init__.py  app.py  embedding_models_config.py  enums.py  streamlit_app.py  types.py  utils.py
deepsearchai/embedding_models/: base.py  blip_image_captioning.py  clip.py  whisper.py  whisper_model.py  whisper_openai.py
deepsearchai/llms/: base.py  openai.py
deepsearchai/llms/configs/: openai.py
deepsearchai/sources/: base.py  local.py  s3.py  utils.py  youtube.py
deepsearchai/tests/end_to_end/: add_and_query_chromadb.py
deepsearchai/tests/llms/: test_whisper.py
deepsearchai/tests/sources/: FILE_NAME  test_local.py  test_s3.py
deepsearchai/tests/vector_databases/: test_chromadb.py
deepsearchai/vector_databases/: base.py  chromadb.py
deepsearchai/vector_databases/configs/: base.py  chromadb.py
docs/: concepts.rst  conf.py  configure.rst  demo.rst  getting_started.rst  index.html  index.rst  installation_issues.rst  intro.rst  make.bat  requirements.txt  usage.rst
infinitesearch/: __init__.py  app.py  config.py  datatype.py  syncer.py  utils.py
infinitesearch/llms/: base.py  clip.py  openai.py
infinitesearch/sources/: base.py  local.py  s3.py  utils.py
infinitesearch/tests/sources/: test_s3.py
infinitesearch/vector_databases/: base.py  chromadb.py
infinitesearch/vector_databases/configs/: base.py  chromadb.py
streamlit_deepsearch/: streamlit_app.py  style.css
