[tool.poetry]
name = "deepsearchai"
version = "0.2.0"
description = ""
authors = ["RupeshBansal"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.220"
pytest = "^7.3.1"
black = "^23.10.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mock = "^5.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11.6"
openai = "^0.28.1"
chromadb = "^0.4.15"
pillow = "10.0.1"
sentence-transformers = "^2.2.2"
torchvision = ">=0.15.1, !=0.15.2"
ftfy = "^6.1.1"
torch = "^2.0.0"
regex = "2023.8.8"
boto3 = "^1.28.72"
mimetype = "^0.1.5"
pydub = "^0.25.1"
langchain = "^0.0.330"
sphinx = { version = "^7.2.6", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
streamlit = "^1.28.0"

[tool.poetry.group.audio]
optional = true

[tool.poetry.group.audio.dependencies]
openai-whisper = "20231106"

[tool.poetry.group.video]
optional = true

[tool.poetry.group.video.dependencies]
google-api-python-client = "^2.107.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
youtube-transcript-api = "^0.6.1"
pytube = "^15.0.0"
openai-whisper = "20231106"

[tool.poetry.group.documentation]
optional = true

[tool.poetry.group.documentation.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
