[tool.poetry]
name = "deepsearchai"
version = "0.3.4"
description = ""
authors = ["RupeshBansal"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.220"
pytest = "^7.3.1"
black = "^23.10.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mock = "^5.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11.6"
openai = "^0.28.1"
chromadb = "^0.4.15"
pillow = "10.0.1"
sentence-transformers = "^2.2.2"
torchvision = ">=0.15.1, !=0.15.2"
ftfy = "^6.1.1"
torch = "^2.0.0"
regex = "2023.8.8"
boto3 = "^1.28.72"
mimetype = "^0.1.5"
pydub = "^0.25.1"
langchain = "^0.0.330"
streamlit = { version = "^1.28.0", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinx = { version = "^7.2.6", optional = true }
openai-whisper = { version = "^20231106", optional = true }
google-api-python-client = { version = "^2.107.0", optional = true }
pytube = { version = "^15.0.0", optional = true }

[tool.poetry.extras]
ui = ["streamlit"]
audio = ["openai-whisper"]
video = ["google-api-python-client", "pytube", "openai-whisper"]
documentation = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
